--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -15,32 +15,59 @@ jobs:
       contents: read
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Export image id as environment variable
-        run: |
-          export IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-
-      - name: Build image php 7.4
-        run: docker build . --file 7.4/Dockerfile --tag $IMAGE_ID:7.4 --label "runnumber=${GITHUB_RUN_ID}"
-
-      - name: Build image php 8.2
-        run: docker build . --file 8.0/Dockerfile --tag $IMAGE_ID:8.0 --label "runnumber=${GITHUB_RUN_ID}"
-
-      - name: Build image php 8.1
-        run: docker build . --file 8.1/Dockerfile --tag $IMAGE_ID:8.1 --label "runnumber=${GITHUB_RUN_ID}"
-
-      - name: Build image php 8.2
-        run: docker build . --file 8.2/Dockerfile --tag $IMAGE_ID:8.2 --label "runnumber=${GITHUB_RUN_ID}"
-
-      - name: Log in to registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      - name: Push image
-        run: |
-          docker tag $IMAGE_ID:8.2 $IMAGE_ID:latest
-          docker push $IMAGE_ID:7.4
-          docker push $IMAGE_ID:8.0
-          docker push $IMAGE_ID:8.1
-          docker push $IMAGE_ID:8.2
-          docker push $IMAGE_ID:latest
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+    
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v2.1.0
+        
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v2.5.0
+      
+      - name: Build and push Docker images for 7.4
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: "{{defaultContext}}:."
+          file: "7.4/Dockerfile"
+          labels: "runnumber=${GITHUB_RUN_ID}"
+          platforms: "linux/amd64,linux/arm64"
+          pull: true
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:7.4
+          github-token: ${{ github.token }}
+      
+      - name: Build and push Docker images for 8.0
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: "{{defaultContext}}:."
+          file: "8.0/Dockerfile"
+          labels: "runnumber=${GITHUB_RUN_ID}"
+          platforms: "linux/amd64,linux/arm64"
+          pull: true
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:8.0
+          github-token: ${{ github.token }}
+      
+      - name: Build and push Docker images for 8.1
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: "{{defaultContext}}:."
+          file: "8.1/Dockerfile"
+          labels: "runnumber=${GITHUB_RUN_ID}"
+          platforms: "linux/amd64,linux/arm64"
+          pull: true
+          push: true
+          tags: "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:8.1"
+          github-token: ${{ github.token }}
+      
+      - name: Build and push Docker images for 8.2
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: "{{defaultContext}}:."
+          file: "8.2/Dockerfile"
+          labels: "runnumber=${GITHUB_RUN_ID}"
+          platforms: "linux/amd64,linux/arm64"
+          pull: true
+          push: true
+          tags: "ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:8.2,ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:latest"
+          github-token: ${{ github.token }}
