--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -3,9 +3,6 @@ name: Build image
 on:
   push:
     branches: [ main ]
-
-env:
-  IMAGE_NAME: nginx-php
   
 jobs:
   push:
@@ -33,7 +30,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:7.4
+          tags: "ghcr.io/${{ github.repository }}:7.4"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.0
@@ -45,7 +42,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:8.0
+          tags: "ghcr.io/${{ github.repository }}:8.0"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.1
@@ -57,7 +54,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:8.1"
+          tags: "ghcr.io/${{ github.repository }}:8.1"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.2
@@ -69,5 +66,5 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:8.2,ghcr.io/${{ github.repository_owner }}/${{ IMAGE_NAME }}:latest"
+          tags: "ghcr.io/${{ github.repository }}:8.2,ghcr.io/${{ github.repository }}:latest"
           github-token: ${{ github.token }}
