--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -3,7 +3,9 @@ name: Build image
 on:
   push:
     branches: [ main ]
-  
+env:
+  IMAGE_ID: "${{ github.repository_owner }}/nginx-php" 
+
 jobs:
   push:
     runs-on: ubuntu-latest
@@ -30,7 +32,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository }}:7.4"
+          tags: "ghcr.io/${{ env.IMAGE_ID }}:7.4"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.0
@@ -42,7 +44,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository }}:8.0"
+          tags: "ghcr.io/${{ env.IMAGE_ID }}:8.0"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.1
@@ -54,7 +56,7 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository }}:8.1"
+          tags: "ghcr.io/${{ env.IMAGE_ID }}:8.1"
           github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.2
@@ -66,5 +68,5 @@ jobs:
           platforms: "linux/amd64,linux/arm64"
           pull: true
           push: true
-          tags: "ghcr.io/${{ github.repository }}:8.2,ghcr.io/${{ github.repository }}:latest"
+          tags: "ghcr.io/${{ env.IMAGE_ID }}:8.2,ghcr.io/${{ env.IMAGE_ID }}:latest"
           github-token: ${{ github.token }}
