--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,6 +23,13 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2.5.0
       
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker images for 7.4
         uses: docker/build-push-action@v4.0.0
         with:
@@ -30,10 +37,8 @@ jobs:
           file: "7.4/Dockerfile"
           labels: "runnumber=${GITHUB_RUN_ID}"
           platforms: "linux/amd64,linux/arm64"
-          pull: true
           push: true
           tags: "${{ env.IMAGE_ID }}:7.4"
-          github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.0
         uses: docker/build-push-action@v4.0.0
@@ -42,10 +47,8 @@ jobs:
           file: "8.0/Dockerfile"
           labels: "runnumber=${GITHUB_RUN_ID}"
           platforms: "linux/amd64,linux/arm64"
-          pull: true
           push: true
           tags: "${{ env.IMAGE_ID }}:8.0"
-          github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.1
         uses: docker/build-push-action@v4.0.0
@@ -54,10 +57,8 @@ jobs:
           file: "8.1/Dockerfile"
           labels: "runnumber=${GITHUB_RUN_ID}"
           platforms: "linux/amd64,linux/arm64"
-          pull: true
           push: true
           tags: "${{ env.IMAGE_ID }}:8.1"
-          github-token: ${{ github.token }}
       
       - name: Build and push Docker images for 8.2
         uses: docker/build-push-action@v4.0.0
@@ -66,7 +67,5 @@ jobs:
           file: "8.2/Dockerfile"
           labels: "runnumber=${GITHUB_RUN_ID}"
           platforms: "linux/amd64,linux/arm64"
-          pull: true
           push: true
           tags: "${{ env.IMAGE_ID }}:8.2,${{ env.IMAGE_ID }}:latest"
-          github-token: ${{ github.token }}
